# InvoiceGuard

./: .gitignore  BLOG.md  README.md  SUBMISSION.md  commit_msg.txt  requirements.txt
invoice_guard/: .env.example  .openenvignore  BLOG.md  Dockerfile  README.md  __init__.py  client.py  eval_round2.py  inference.py  models.py  openenv.yaml  pyproject.toml
invoice_guard/graders/: __init__.py  scoring.py
invoice_guard/notebooks/: InvoiceGuard_Round2_GRPO_Reproducibility.ipynb
invoice_guard/outputs/baseline_scores/: canonical__clean_qwen25_7b.json  canonical__clean_qwen3_4b_instruct_2507.json  hard__clean_qwen25_7b.json  hard__clean_qwen3_4b_instruct_2507.json  local_baseline_qwen3_4b.json
invoice_guard/outputs/job_reports/: 69ed3f79d2c8bd8662bce8da_inspect.json  69ed3f79d2c8bd8662bce8da_logs.txt  69ed3f79d2c8bd8662bce8da_repo_files.json
invoice_guard/outputs/round2/: canonical__clean_gpt41mini.json  canonical__clean_gpt4o.json  canonical__clean_gpt51.json  hard__clean_gpt41mini.json  hard__clean_gpt4o.json  hard__clean_gpt51.json
invoice_guard/outputs/training_runs/: sft_v5c_sft_metrics.jsonl  sft_v5c_sft_summary.json  sft_v5d_sft_metrics.jsonl  sft_v5d_sft_summary.json
invoice_guard/server/: __init__.py  app.py  invoice_guard_environment.py
invoice_guard/tasks/: __init__.py  definitions.py  hard_definitions.py
invoice_guard/tests/: test_environment.py  test_grader.py  test_models.py
invoice_guard/training/: README.md  __init__.py  eval_adapter.py  launch_hf_job.py  merge_adapter.py  plot_round2_progression.py  rollout.py  train_grpo.py  train_sft.py
(+13 files in other folders)
